@@ -3,7 +3,6 @@ AM_CONFIG_HEADER([config.h])
 
 AC_C_BIGENDIAN
 
-
 AM_INIT_AUTOMAKE
 
 AC_PROG_CC
@@ -11,9 +10,11 @@ AM_SANITY_CHECK
 
 AC_CHECK_LIB(m, erf,,[AC_MSG_ERROR("need libm")])
 
+PKG_CHECK_MODULES(FFTW3, fftw3)
 PKG_CHECK_MODULES(DIFXIO, difxio >= 2.0)
-LIBS="${LIBS} ${DIFXIO_LIBS}"
-CFLAGS="-D_LARGE_FILE_SOURCE -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 ${CFLAGS} ${DIFXIO_CFLAGS}"
+
+LIBS="${LIBS} ${DIFXIO_LIBS} ${FFTW3_LIBS}"
+CFLAGS="-D_LARGE_FILE_SOURCE -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 ${CFLAGS} ${DIFXIO_CFLAGS} ${FFTW3_CFLAGS}"
 
 AC_OUTPUT([ \
 	Makefile \
