@@ -4,6 +4,7 @@
 #include <complex.h>
 #include <math.h>
 #include <glob.h>
+#include <sys/types.h>
 #include "difxio/parsedifx.h"
 #include "difx2fits.h"
 
